@@ -1,55 +1,60 @@
 package configurations
 
 import common.Os
-import common.applyDefaultSettings
+import common.applyPerformanceTestSettings
 import common.buildToolGradleParameters
 import common.checkCleanM2
 import common.gradleWrapper
+import common.individualPerformanceTestArtifactRules
+import common.performanceTestCommandLine
 import jetbrains.buildServer.configs.kotlin.v2018_2.AbsoluteId
+import jetbrains.buildServer.configs.kotlin.v2018_2.BuildStep
+import jetbrains.buildServer.configs.kotlin.v2018_2.buildSteps.script
 import model.CIBuildModel
 
-class IndividualPerformanceScenarioWorkers(model: CIBuildModel) : BaseGradleBuildType(model, init = {
-    uuid = model.projectPrefix + "IndividualPerformanceScenarioWorkersLinux"
+class IndividualPerformanceScenarioWorkers(model: CIBuildModel, os: Os = Os.linux) : BaseGradleBuildType(model, init = {
+    uuid = model.projectPrefix + "IndividualPerformanceScenarioWorkers${os.name.capitalize()}"
     id = AbsoluteId(uuid)
-    name = "Individual Performance Scenario Workers - Linux"
+    name = "Individual Performance Scenario Workers - ${os.name.capitalize()}"
 
-    applyDefaultSettings(timeout = 420)
-    artifactRules = """
-        subprojects/*/build/test-results-*.zip => results
-        subprojects/*/build/tmp/**/log.txt => failure-logs
-    """.trimIndent()
+    applyPerformanceTestSettings(os = os, timeout = 420)
+    artifactRules = individualPerformanceTestArtifactRules
 
     params {
         param("baselines", "defaults")
+        param("templates", "")
         param("channel", "commits")
         param("checks", "all")
         param("runs", "defaults")
         param("warmups", "defaults")
-        param("templates", "")
         param("scenario", "")
 
-        param("performance.db.url", "jdbc:h2:ssl://dev61.gradle.org:9092")
-        param("performance.db.username", "tcagent")
-
-        param("env.GRADLE_OPTS", "-Xmx1536m -XX:MaxPermSize=384m")
         param("env.ANDROID_HOME", "/opt/android/sdk")
-        param("env.JAVA_HOME", buildJavaHome)
-        param("env.BUILD_BRANCH", "%teamcity.build.branch%")
         param("env.PATH", "%env.PATH%:/opt/swift/4.2.3/usr/bin")
     }
 
     steps {
+        script {
+            name = "KILL_GRADLE_PROCESSES"
+            executionMode = BuildStep.ExecutionMode.ALWAYS
+            scriptContent = killAllGradleProcesses
+        }
         gradleWrapper {
             name = "GRADLE_RUNNER"
             tasks = ""
             gradleParams = (
-                    buildToolGradleParameters(isContinue = false)
-                    + listOf("""clean %templates% fullPerformanceTests --scenarios "%scenario%" --baselines %baselines% --warmups %warmups% --runs %runs% --checks %checks% --channel %channel% -x prepareSamples -Porg.gradle.performance.branchName=%teamcity.build.branch% -Porg.gradle.performance.db.url=%performance.db.url% -Porg.gradle.performance.db.username=%performance.db.username% -Porg.gradle.performance.db.password=%performance.db.password.tcagent% -PtimestampedVersion""",
-                            buildScanTag("IndividualPerformanceScenarioWorkers"), "-PtestJavaHome=${individualPerformanceTestJavaHome}")
-                            + model.parentBuildCache.gradleParameters(Os.linux)
-                    ).joinToString(separator = " ")
+                performanceTestCommandLine(
+                    "clean %templates% fullPerformanceTests",
+                    "%baselines%",
+                    """--scenarios "%scenario%" --warmups %warmups% --runs %runs% --checks %checks% --channel %channel%""",
+                    individualPerformanceTestJavaHome(os)
+                ) +
+                    buildToolGradleParameters(isContinue = false, os = os) +
+                    buildScanTag("IndividualPerformanceScenarioWorkers") +
+                    model.parentBuildCache.gradleParameters(os)
+                ).joinToString(separator = " ")
         }
-        checkCleanM2()
+        checkCleanM2(os)
     }
 
     applyDefaultDependencies(model, this)
