@@ -17,57 +17,35 @@
 package org.gradle.execution.plan;
 
 import com.google.common.base.Function;
-import com.google.common.base.Predicate;
 import com.google.common.collect.HashMultimap;
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
-import org.gradle.api.Action;
 import org.gradle.api.BuildCancelledException;
 import org.gradle.api.CircularReferenceException;
 import org.gradle.api.GradleException;
 import org.gradle.api.NonNullApi;
 import org.gradle.api.Project;
 import org.gradle.api.Task;
-import org.gradle.api.Transformer;
-import org.gradle.api.UncheckedIOException;
 import org.gradle.api.internal.GradleInternal;
-import org.gradle.api.internal.TaskInternal;
-import org.gradle.api.internal.file.FileCollectionFactory;
-import org.gradle.api.internal.file.FileResolver;
 import org.gradle.api.internal.project.ProjectInternal;
-import org.gradle.api.internal.tasks.TaskPropertyUtils;
-import org.gradle.api.internal.tasks.properties.FileParameterUtils;
-import org.gradle.api.internal.tasks.properties.InputFilePropertyType;
-import org.gradle.api.internal.tasks.properties.OutputFilePropertySpec;
-import org.gradle.api.internal.tasks.properties.OutputFilePropertyType;
-import org.gradle.api.internal.tasks.properties.PropertyValue;
-import org.gradle.api.internal.tasks.properties.PropertyVisitor;
-import org.gradle.api.internal.tasks.properties.PropertyWalker;
 import org.gradle.api.specs.Spec;
 import org.gradle.api.specs.Specs;
-import org.gradle.api.tasks.FileNormalizer;
-import org.gradle.api.tasks.TaskExecutionException;
 import org.gradle.internal.Pair;
 import org.gradle.internal.graph.CachingDirectedGraphWalker;
-import org.gradle.internal.graph.DirectedGraph;
 import org.gradle.internal.graph.DirectedGraphRenderer;
-import org.gradle.internal.graph.GraphNodeRenderer;
 import org.gradle.internal.logging.text.StyledTextOutput;
-import org.gradle.internal.resources.ResourceDeadlockException;
 import org.gradle.internal.resources.ResourceLock;
 import org.gradle.internal.resources.ResourceLockState;
-import org.gradle.internal.service.ServiceRegistry;
 import org.gradle.internal.work.WorkerLeaseRegistry;
-import org.gradle.internal.work.WorkerLeaseService;
-import org.gradle.util.CollectionUtils;
-import org.gradle.util.Path;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.annotation.Nullable;
 import java.io.File;
-import java.io.IOException;
 import java.io.StringWriter;
 import java.util.AbstractCollection;
 import java.util.ArrayDeque;
@@ -75,20 +53,21 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Deque;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedHashSet;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.function.Consumer;
 
 /**
  * A reusable implementation of ExecutionPlan. The {@link #addEntryTasks(java.util.Collection)} and {@link #clear()} methods are NOT threadsafe, and callers must synchronize access to these methods.
  */
 @NonNullApi
 public class DefaultExecutionPlan implements ExecutionPlan {
-    private final Set<TaskNode> entryTasks = new LinkedHashSet<TaskNode>();
+    private static final Logger LOGGER = LoggerFactory.getLogger(DefaultExecutionPlan.class);
+
+    private final Set<Node> entryNodes = new LinkedHashSet<>();
     private final NodeMapping nodeMapping = new NodeMapping();
     private final List<Node> executionQueue = Lists.newLinkedList();
     private final Map<Project, ResourceLock> projectLocks = Maps.newHashMap();
@@ -101,18 +80,15 @@ public class DefaultExecutionPlan implements ExecutionPlan {
 
     private final Set<Node> runningNodes = Sets.newIdentityHashSet();
     private final Set<Node> filteredNodes = Sets.newIdentityHashSet();
-    private final Map<Node, MutationInfo> mutations = Maps.newIdentityHashMap();
-    private final Map<File, String> canonicalizedFileCache = Maps.newIdentityHashMap();
+    private final Set<Node> producedButNotYetConsumed = Sets.newIdentityHashSet();
     private final Map<Pair<Node, Node>, Boolean> reachableCache = Maps.newHashMap();
     private final List<Node> dependenciesWhichRequireMonitoring = Lists.newArrayList();
     private boolean maybeNodesReady;
-    private final WorkerLeaseService workerLeaseService;
     private final GradleInternal gradle;
 
     private boolean buildCancelled;
 
-    public DefaultExecutionPlan(WorkerLeaseService workerLeaseService, GradleInternal gradle, TaskNodeFactory taskNodeFactory, TaskDependencyResolver dependencyResolver) {
-        this.workerLeaseService = workerLeaseService;
+    public DefaultExecutionPlan(GradleInternal gradle, TaskNodeFactory taskNodeFactory, TaskDependencyResolver dependencyResolver) {
         this.gradle = gradle;
         this.taskNodeFactory = taskNodeFactory;
         this.dependencyResolver = dependencyResolver;
@@ -120,11 +96,7 @@ public class DefaultExecutionPlan implements ExecutionPlan {
 
     @Override
     public String getDisplayName() {
-        Path path = gradle.findIdentityPath();
-        if (path == null) {
-            return "gradle";
-        }
-        return path.toString();
+        return gradle.getIdentityPath().toString();
     }
 
     @Override
@@ -132,11 +104,21 @@ public class DefaultExecutionPlan implements ExecutionPlan {
         return nodeMapping.get(task);
     }
 
-    public void addEntryTasks(Collection<? extends Task> tasks) {
-        final Deque<Node> queue = new ArrayDeque<Node>();
-        Set<Node> nodesInUnknownState = Sets.newLinkedHashSet();
+    public void addNodes(Collection<? extends Node> nodes) {
+        Deque<Node> queue = new ArrayDeque<>(nodes);
+        for (Node node : nodes) {
+            assert node.getDependenciesProcessed();
+            node.require();
+            node.dependenciesProcessed();
+            entryNodes.add(node);
+        }
+        doAddNodes(queue);
+    }
 
-        List<Task> sortedTasks = new ArrayList<Task>(tasks);
+    public void addEntryTasks(Collection<? extends Task> tasks) {
+        final Deque<Node> queue = new ArrayDeque<>();
+
+        List<Task> sortedTasks = new ArrayList<>(tasks);
         Collections.sort(sortedTasks);
         for (Task task : sortedTasks) {
             TaskNode node = taskNodeFactory.getOrCreateNode(task);
@@ -145,10 +127,15 @@ public class DefaultExecutionPlan implements ExecutionPlan {
             } else if (filter.isSatisfiedBy(task)) {
                 node.require();
             }
-            entryTasks.add(node);
+            entryNodes.add(node);
             queue.add(node);
         }
 
+        doAddNodes(queue);
+    }
+
+    private void doAddNodes(Deque<Node> queue) {
+        Set<Node> nodesInUnknownState = Sets.newLinkedHashSet();
         final Set<Node> visiting = Sets.newHashSet();
 
         while (!queue.isEmpty()) {
@@ -174,12 +161,9 @@ public class DefaultExecutionPlan implements ExecutionPlan {
                 // node in the queue
                 // Make sure it has been configured
                 node.prepareForExecution();
-                node.resolveDependencies(dependencyResolver, new Action<Node>() {
-                    @Override
-                    public void execute(Node targetNode) {
-                        if (!visiting.contains(targetNode)) {
-                            queue.addFirst(targetNode);
-                        }
+                node.resolveDependencies(dependencyResolver, targetNode -> {
+                    if (!visiting.contains(targetNode)) {
+                        queue.addFirst(targetNode);
                     }
                 });
                 if (node.isRequired()) {
@@ -209,24 +193,24 @@ public class DefaultExecutionPlan implements ExecutionPlan {
     }
 
     private void resolveNodesInUnknownState(Set<Node> nodesInUnknownState) {
-        List<Node> queue = Lists.newArrayList(nodesInUnknownState);
+        Deque<Node> queue = new ArrayDeque<>(nodesInUnknownState);
         Set<Node> visiting = Sets.newHashSet();
 
         while (!queue.isEmpty()) {
-            Node node = queue.get(0);
+            Node node = queue.peekFirst();
             if (node.isInKnownState()) {
-                queue.remove(0);
+                queue.removeFirst();
                 continue;
             }
 
             if (visiting.add(node)) {
                 for (Node hardPredecessor : node.getDependencyPredecessors()) {
                     if (!visiting.contains(hardPredecessor)) {
-                        queue.add(0, hardPredecessor);
+                        queue.addFirst(hardPredecessor);
                     }
                 }
             } else {
-                queue.remove(0);
+                queue.removeFirst();
                 visiting.remove(node);
                 node.mustNotRun();
                 for (Node predecessor : node.getDependencyPredecessors()) {
@@ -250,30 +234,30 @@ public class DefaultExecutionPlan implements ExecutionPlan {
     }
 
     public void determineExecutionPlan() {
-        List<NodeInVisitingSegment> nodeQueue = Lists.newArrayList(Iterables.transform(entryTasks, new Function<TaskNode, NodeInVisitingSegment>() {
+        LinkedList<NodeInVisitingSegment> nodeQueue = Lists.newLinkedList(Iterables.transform(entryNodes, new Function<Node, NodeInVisitingSegment>() {
             private int index;
 
             @Override
             @SuppressWarnings("NullableProblems")
-            public NodeInVisitingSegment apply(TaskNode taskNode) {
-                return new NodeInVisitingSegment(taskNode, index++);
+            public NodeInVisitingSegment apply(Node node) {
+                return new NodeInVisitingSegment(node, index++);
             }
         }));
         int visitingSegmentCounter = nodeQueue.size();
         Set<Node> dependenciesWhichRequireMonitoring = Sets.newHashSet();
 
         HashMultimap<Node, Integer> visitingNodes = HashMultimap.create();
-        Deque<GraphEdge> walkedShouldRunAfterEdges = new ArrayDeque<GraphEdge>();
-        Deque<Node> path = new ArrayDeque<Node>();
+        Deque<GraphEdge> walkedShouldRunAfterEdges = new ArrayDeque<>();
+        Deque<Node> path = new ArrayDeque<>();
         Map<Node, Integer> planBeforeVisiting = Maps.newHashMap();
 
         while (!nodeQueue.isEmpty()) {
-            NodeInVisitingSegment nodeInVisitingSegment = nodeQueue.get(0);
+            NodeInVisitingSegment nodeInVisitingSegment = nodeQueue.peekFirst();
             int currentSegment = nodeInVisitingSegment.visitingSegment;
             Node node = nodeInVisitingSegment.node;
 
             if (!node.isIncludeInGraph() || nodeMapping.contains(node)) {
-                nodeQueue.remove(0);
+                nodeQueue.removeFirst();
                 visitingNodes.remove(node, currentSegment);
                 maybeRemoveProcessedShouldRunAfterEdge(walkedShouldRunAfterEdges, node);
                 if (node.requiresMonitoring()) {
@@ -309,12 +293,12 @@ public class DefaultExecutionPlan implements ExecutionPlan {
                             onOrderingCycle(successor, node);
                         }
                     }
-                    nodeQueue.add(0, new NodeInVisitingSegment(successor, currentSegment));
+                    nodeQueue.addFirst(new NodeInVisitingSegment(successor, currentSegment));
                 }
                 path.push(node);
             } else {
                 // Have visited this node's dependencies - add it to the end of the plan
-                nodeQueue.remove(0);
+                nodeQueue.removeFirst();
                 maybeRemoveProcessedShouldRunAfterEdge(walkedShouldRunAfterEdges, node);
                 visitingNodes.remove(node, currentSegment);
                 path.pop();
@@ -323,40 +307,31 @@ public class DefaultExecutionPlan implements ExecutionPlan {
                     dependenciesWhichRequireMonitoring.add(node);
                 }
 
-                MutationInfo mutations = getOrCreateMutationsOf(node);
                 for (Node dependency : node.getDependencySuccessors()) {
-                    getOrCreateMutationsOf(dependency).consumingNodes.add(node);
-                    mutations.producingNodes.add(dependency);
+                    dependency.getMutationInfo().consumingNodes.add(node);
                 }
 
-                Project project = node.getProject();
+                Project project = node.getProjectToLock();
                 if (project != null) {
-                    projectLocks.put(project, getOrCreateProjectLock(project));
+                    projectLocks.put(project, getProjectLock(project));
                 }
 
                 // Add any finalizers to the queue
                 for (Node finalizer : node.getFinalizers()) {
                     if (!visitingNodes.containsKey(finalizer)) {
-                        nodeQueue.add(finalizerTaskPosition(finalizer, nodeQueue), new NodeInVisitingSegment(finalizer, visitingSegmentCounter++));
+                        int position = finalizerTaskPosition(finalizer, nodeQueue);
+                        nodeQueue.add(position, new NodeInVisitingSegment(finalizer, visitingSegmentCounter++));
                     }
                 }
             }
         }
         executionQueue.clear();
+        dependencyResolver.clear();
         Iterables.addAll(executionQueue, nodeMapping);
         for (Node node : executionQueue) {
             maybeNodesReady |= node.updateAllDependenciesComplete() && node.isReady();
         }
         this.dependenciesWhichRequireMonitoring.addAll(dependenciesWhichRequireMonitoring);
-    }
-
-    private MutationInfo getOrCreateMutationsOf(Node node) {
-        MutationInfo mutations = this.mutations.get(node);
-        if (mutations == null) {
-            mutations = new MutationInfo(node);
-            this.mutations.put(node, mutations);
-        }
-        return mutations;
     }
 
     private void maybeRemoveProcessedShouldRunAfterEdge(Deque<GraphEdge> walkedShouldRunAfterEdges, Node node) {
@@ -371,13 +346,13 @@ public class DefaultExecutionPlan implements ExecutionPlan {
         nodeMapping.retainFirst(count);
     }
 
-    private void restoreQueue(List<NodeInVisitingSegment> nodeQueue, HashMultimap<Node, Integer> visitingNodes, GraphEdge toBeRemoved) {
+    private void restoreQueue(Deque<NodeInVisitingSegment> nodeQueue, HashMultimap<Node, Integer> visitingNodes, GraphEdge toBeRemoved) {
         NodeInVisitingSegment nextInQueue = null;
         while (nextInQueue == null || !toBeRemoved.from.equals(nextInQueue.node)) {
-            nextInQueue = nodeQueue.get(0);
+            nextInQueue = nodeQueue.peekFirst();
             visitingNodes.remove(nextInQueue.node, nextInQueue.visitingSegment);
             if (!toBeRemoved.from.equals(nextInQueue.node)) {
-                nodeQueue.remove(0);
+                nodeQueue.removeFirst();
             }
         }
     }
@@ -394,13 +369,10 @@ public class DefaultExecutionPlan implements ExecutionPlan {
         if (!(node instanceof TaskNode)) {
             return;
         }
-        Iterables.removeIf(((TaskNode) node).getShouldSuccessors(), new Predicate<Node>() {
-            @Override
-            @SuppressWarnings("NullableProblems")
-            public boolean apply(Node input) {
-                return visitingNodes.containsEntry(input, nodeWithVisitingSegment.visitingSegment);
-            }
-        });
+        Iterables.removeIf(
+            ((TaskNode) node).getShouldSuccessors(),
+            input -> visitingNodes.containsEntry(input, nodeWithVisitingSegment.visitingSegment)
+        );
     }
 
     private void takePlanSnapshotIfCanBeRestoredToCurrentTask(Map<Node, Integer> planBeforeVisiting, Node node) {
@@ -423,30 +395,23 @@ public class DefaultExecutionPlan implements ExecutionPlan {
      * Given a finalizer task, determine where in the current node queue that it should be inserted.
      * The finalizer should be inserted after any of it's preceding tasks.
      */
-    private int finalizerTaskPosition(Node finalizer, final List<NodeInVisitingSegment> nodeQueue) {
+    private int finalizerTaskPosition(Node finalizer, final Deque<NodeInVisitingSegment> nodeQueue) {
         if (nodeQueue.size() == 0) {
             return 0;
         }
 
         Set<Node> precedingTasks = getAllPrecedingNodes(finalizer);
-        Set<Integer> precedingTaskIndices = CollectionUtils.collect(precedingTasks, new Transformer<Integer, Node>() {
-            @Override
-            public Integer transform(final Node dependsOnTask) {
-                return Iterables.indexOf(nodeQueue, new Predicate<NodeInVisitingSegment>() {
-                    @Override
-                    @SuppressWarnings("NullableProblems")
-                    public boolean apply(NodeInVisitingSegment nodeInVisitingSegment) {
-                        return nodeInVisitingSegment.node.equals(dependsOnTask);
-                    }
-                });
-            }
-        });
-        return Collections.max(precedingTaskIndices) + 1;
+        int maxPrecedingTaskIndex = precedingTasks.stream()
+            .mapToInt(dependsOnTask -> Iterables.indexOf(nodeQueue, nodeInVisitingSegment -> nodeInVisitingSegment.node.equals(dependsOnTask)))
+            .max()
+            .orElseThrow(IllegalStateException::new);
+
+        return maxPrecedingTaskIndex + 1;
     }
 
     private Set<Node> getAllPrecedingNodes(Node finalizer) {
         Set<Node> precedingNodes = Sets.newHashSet();
-        Deque<Node> candidateNodes = new ArrayDeque<Node>();
+        Deque<Node> candidateNodes = new ArrayDeque<>();
 
         // Consider every node that must run before the finalizer
         Iterables.addAll(candidateNodes, finalizer.getAllSuccessors());
@@ -464,44 +429,35 @@ public class DefaultExecutionPlan implements ExecutionPlan {
         return precedingNodes;
     }
 
-    private void onOrderingCycle(Node successor, Node node) {
-        CachingDirectedGraphWalker<Node, Void> graphWalker = new CachingDirectedGraphWalker<Node, Void>(new DirectedGraph<Node, Void>() {
-            @Override
-            public void getNodeValues(Node node, Collection<? super Void> values, Collection<? super Node> connectedNodes) {
-                connectedNodes.addAll(node.getDependencySuccessors());
-                if (node instanceof TaskNode) {
-                    TaskNode taskNode = (TaskNode) node;
-                    connectedNodes.addAll(taskNode.getMustSuccessors());
-                    connectedNodes.addAll(taskNode.getFinalizingSuccessors());
-                }
+    private void onOrderingCycle(Node successor, Node currentNode) {
+        CachingDirectedGraphWalker<Node, Void> graphWalker = new CachingDirectedGraphWalker<>((node, values, connectedNodes) -> {
+            connectedNodes.addAll(node.getDependencySuccessors());
+            if (node instanceof TaskNode) {
+                TaskNode taskNode = (TaskNode) node;
+                connectedNodes.addAll(taskNode.getMustSuccessors());
+                connectedNodes.addAll(taskNode.getFinalizingSuccessors());
             }
         });
-        graphWalker.add(entryTasks);
+        graphWalker.add(entryNodes);
 
         List<Set<Node>> cycles = graphWalker.findCycles();
         if (cycles.isEmpty()) {
             // TODO: This isn't correct. This means that we've detected a cycle while determining the execution plan, but the graph walker did not find one.
             // https://github.com/gradle/gradle/issues/2293
-            throw new GradleException("Misdetected cycle between " + node + " and " + successor + ". Help us by reporting this to https://github.com/gradle/gradle/issues/2293");
+            throw new GradleException("Misdetected cycle between " + currentNode + " and " + successor + ". Help us by reporting this to https://github.com/gradle/gradle/issues/2293");
         }
-        final List<Node> firstCycle = new ArrayList<Node>(cycles.get(0));
+        List<Node> firstCycle = new ArrayList<>(cycles.get(0));
         Collections.sort(firstCycle);
 
-        DirectedGraphRenderer<Node> graphRenderer = new DirectedGraphRenderer<Node>(new GraphNodeRenderer<Node>() {
-            @Override
-            public void renderTo(Node node, StyledTextOutput output) {
-                output.withStyle(StyledTextOutput.Style.Identifier).text(node);
-            }
-        }, new DirectedGraph<Node, Object>() {
-            @Override
-            public void getNodeValues(Node node, Collection<? super Object> values, Collection<? super Node> connectedNodes) {
+        DirectedGraphRenderer<Node> graphRenderer = new DirectedGraphRenderer<>(
+            (it, output) -> output.withStyle(StyledTextOutput.Style.Identifier).text(it),
+            (it, values, connectedNodes) -> {
                 for (Node dependency : firstCycle) {
-                    if (node.hasHardSuccessor(dependency)) {
+                    if (it.hasHardSuccessor(dependency)) {
                         connectedNodes.add(dependency);
                     }
                 }
-            }
-        });
+            });
         StringWriter writer = new StringWriter();
         graphRenderer.renderTo(firstCycle.get(0), writer);
         throw new CircularReferenceException(String.format("Circular dependency between the following tasks:%n%s", writer.toString()));
@@ -510,13 +466,12 @@ public class DefaultExecutionPlan implements ExecutionPlan {
     public void clear() {
         taskNodeFactory.clear();
         dependencyResolver.clear();
-        entryTasks.clear();
+        entryNodes.clear();
         nodeMapping.clear();
         executionQueue.clear();
         projectLocks.clear();
         failureCollector.clearFailures();
-        mutations.clear();
-        canonicalizedFileCache.clear();
+        producedButNotYetConsumed.clear();
         reachableCache.clear();
         dependenciesWhichRequireMonitoring.clear();
         runningNodes.clear();
@@ -525,6 +480,10 @@ public class DefaultExecutionPlan implements ExecutionPlan {
     @Override
     public Set<Task> getTasks() {
         return nodeMapping.getTasks();
+    }
+
+    public List<Node> getScheduledNodes() {
+        return ImmutableList.copyOf(nodeMapping.nodes);
     }
 
     @Override
@@ -550,12 +509,14 @@ public class DefaultExecutionPlan implements ExecutionPlan {
     @Nullable
     public Node selectNext(WorkerLeaseRegistry.WorkerLease workerLease, ResourceLockState resourceLockState) {
         if (allProjectsLocked()) {
+            // TODO - this is incorrect. We can still run nodes that don't need a project lock
             return null;
         }
 
         for (Iterator<Node> iterator = dependenciesWhichRequireMonitoring.iterator(); iterator.hasNext();) {
             Node node = iterator.next();
             if (node.isComplete()) {
+                LOGGER.debug("Monitored node {} completed", node);
                 updateAllDependenciesCompleteForPredecessors(node);
                 iterator.remove();
             }
@@ -571,27 +532,41 @@ public class DefaultExecutionPlan implements ExecutionPlan {
                 foundReadyNode = true;
                 MutationInfo mutations = getResolvedMutationInfo(node);
 
-                // TODO: convert output file checks to a resource lock
-                if (!tryLockProjectFor(node)
-                    || !workerLease.tryLock()
-                    || !canRunWithCurrentlyExecutedNodes(node, mutations)) {
+                if (!tryAcquireLocksForNode(node, workerLease, mutations)) {
                     resourceLockState.releaseLocks();
                     continue;
                 }
 
                 if (node.allDependenciesSuccessful()) {
-                    recordNodeStarted(node);
-                    node.startExecution();
+                    node.startExecution(this::recordNodeExecutionStarted);
                 } else {
-                    node.skipExecution();
-                    updateAllDependenciesCompleteForPredecessors(node);
+                    node.skipExecution(this::recordNodeCompleted);
                 }
                 iterator.remove();
                 return node;
             }
         }
+        LOGGER.debug("No node could be selected, nodes ready: {}", foundReadyNode);
         maybeNodesReady = foundReadyNode;
         return null;
+    }
+
+    private boolean tryAcquireLocksForNode(Node node, WorkerLeaseRegistry.WorkerLease workerLease, MutationInfo mutations) {
+        if (!tryLockProjectFor(node)) {
+            LOGGER.debug("Cannot acquire project lock for node {}", node);
+            return false;
+        } else if (!tryLockSharedResourceFor(node)) {
+            LOGGER.debug("Cannot acquire shared resource lock for node {}", node);
+            return false;
+        } else if (!workerLease.tryLock()) {
+            LOGGER.debug("Cannot acquire worker lease lock for node {}", node);
+            return false;
+        // TODO: convert output file checks to a resource lock
+        } else if (!canRunWithCurrentlyExecutedNodes(node, mutations)) {
+            LOGGER.debug("Node {} cannot run with currently running nodes {}", node, runningNodes);
+            return false;
+        }
+        return true;
     }
 
     private void updateAllDependenciesCompleteForPredecessors(Node node) {
@@ -601,115 +576,37 @@ public class DefaultExecutionPlan implements ExecutionPlan {
     }
 
     private boolean tryLockProjectFor(Node node) {
-        if (node.getProject() != null) {
-            return getProjectLock(node.getProject()).tryLock();
+        if (node.getProjectToLock() != null) {
+            return getProjectLock(node.getProjectToLock()).tryLock();
         } else {
             return true;
         }
     }
 
     private void unlockProjectFor(Node node) {
-        if (node.getProject() != null) {
-            getProjectLock(node.getProject()).unlock();
+        if (node.getProjectToLock() != null) {
+            getProjectLock(node.getProjectToLock()).unlock();
         }
     }
 
     private ResourceLock getProjectLock(Project project) {
-        return projectLocks.get(project);
+        return ((ProjectInternal)project).getMutationState().getAccessLock();
+    }
+
+    private boolean tryLockSharedResourceFor(Node node) {
+        return node.getResourcesToLock().stream().allMatch(ResourceLock::tryLock);
+    }
+
+    private void unlockSharedResourcesFor(Node node) {
+        node.getResourcesToLock().forEach(ResourceLock::unlock);
     }
 
     private MutationInfo getResolvedMutationInfo(Node node) {
-        MutationInfo mutations = this.mutations.get(node);
+        MutationInfo mutations = node.getMutationInfo();
         if (!mutations.resolved) {
-            resolveMutations(mutations, node);
+            node.resolveMutations();
         }
         return mutations;
-    }
-
-    private void resolveMutations(final MutationInfo mutations, Node node) {
-        if (node instanceof LocalTaskNode) {
-            final LocalTaskNode taskNode = (LocalTaskNode) node;
-            final TaskInternal task = taskNode.getTask();
-            ProjectInternal project = (ProjectInternal) task.getProject();
-            ServiceRegistry serviceRegistry = project.getServices();
-            final FileResolver resolver = serviceRegistry.get(FileResolver.class);
-            final FileCollectionFactory fileCollectionFactory = serviceRegistry.get(FileCollectionFactory.class);
-            PropertyWalker propertyWalker = serviceRegistry.get(PropertyWalker.class);
-            try {
-                TaskPropertyUtils.visitProperties(propertyWalker, task, new PropertyVisitor.Adapter() {
-                    @Override
-                    public void visitOutputFileProperty(final String propertyName, boolean optional, final PropertyValue value, final OutputFilePropertyType filePropertyType) {
-                        withDeadlockHandling(
-                            taskNode,
-                            "an output",
-                            "output property '" + propertyName + "'",
-                            new Runnable() {
-                                @Override
-                                public void run() {
-                                    FileParameterUtils.resolveOutputFilePropertySpecs(task.toString(), propertyName, value, filePropertyType, fileCollectionFactory, new Consumer<OutputFilePropertySpec>() {
-                                        @Override
-                                        public void accept(OutputFilePropertySpec outputFilePropertySpec) {
-                                            mutations.outputPaths.addAll(canonicalizedPaths(canonicalizedFileCache, outputFilePropertySpec.getPropertyFiles()));
-                                        }
-                                    });
-                                }
-                            }
-                        );
-                        mutations.hasOutputs = true;
-                    }
-
-                    @Override
-                    public void visitLocalStateProperty(final Object value) {
-                        withDeadlockHandling(taskNode, "a local state property", "local state properties", new Runnable() {
-                            @Override
-                            public void run() {
-                                mutations.outputPaths.addAll(canonicalizedPaths(canonicalizedFileCache, resolver.resolveFiles(value)));
-                            }
-                        });
-                        mutations.hasLocalState = true;
-                    }
-
-                    @Override
-                    public void visitDestroyableProperty(final Object value) {
-                        withDeadlockHandling(taskNode, "a destroyable", "destroyables", new Runnable() {
-                            @Override
-                            public void run() {
-                                mutations.destroyablePaths.addAll(canonicalizedPaths(canonicalizedFileCache, resolver.resolveFiles(value)));
-                            }
-                        });
-                    }
-
-                    @Override
-                    public void visitInputFileProperty(String propertyName, boolean optional, boolean skipWhenEmpty, boolean incremental, @Nullable Class<? extends FileNormalizer> fileNormalizer, PropertyValue value, InputFilePropertyType filePropertyType) {
-                        mutations.hasFileInputs = true;
-                    }
-                });
-            } catch (Exception e) {
-                throw new TaskExecutionException(task, e);
-            }
-
-            mutations.resolved = true;
-
-            if (!mutations.destroyablePaths.isEmpty()) {
-                if (mutations.hasOutputs) {
-                    throw new IllegalStateException("Task " + taskNode + " has both outputs and destroyables defined.  A task can define either outputs or destroyables, but not both.");
-                }
-                if (mutations.hasFileInputs) {
-                    throw new IllegalStateException("Task " + taskNode + " has both inputs and destroyables defined.  A task can define either inputs or destroyables, but not both.");
-                }
-                if (mutations.hasLocalState) {
-                    throw new IllegalStateException("Task " + taskNode + " has both local state and destroyables defined.  A task can define either local state or destroyables, but not both.");
-                }
-            }
-        }
-    }
-
-    private void withDeadlockHandling(TaskNode task, String singular, String description, Runnable runnable) {
-        try {
-            runnable.run();
-        } catch (ResourceDeadlockException e) {
-            throw new IllegalStateException(String.format("A deadlock was detected while resolving the %s for task '%s'. This can be caused, for instance, by %s property causing dependency resolution.", description, task, singular), e);
-        }
     }
 
     private boolean allProjectsLocked() {
@@ -718,13 +615,7 @@ public class DefaultExecutionPlan implements ExecutionPlan {
                 return false;
             }
         }
-        return true;
-    }
-
-    private ResourceLock getOrCreateProjectLock(Project project) {
-        Path buildPath = ((ProjectInternal) project).getMutationState().getOwner().getIdentityPath();
-        Path projectPath = ((ProjectInternal) project).getIdentityPath();
-        return workerLeaseService.getProjectLock(buildPath, projectPath);
+        return !projectLocks.isEmpty();
     }
 
     private boolean canRunWithCurrentlyExecutedNodes(Node node, MutationInfo mutations) {
@@ -741,31 +632,10 @@ public class DefaultExecutionPlan implements ExecutionPlan {
         return !doesDestroyNotYetConsumedOutputOfAnotherNode(node, candidateNodeDestroyables);
     }
 
-    private static ImmutableSet<String> canonicalizedPaths(final Map<File, String> cache, Iterable<File> files) {
-        ImmutableSet.Builder<String> builder = ImmutableSet.builder();
-        for (File file : files) {
-            builder.add(canonicalizePath(file, cache));
-        }
-        return builder.build();
-    }
-
-    private static String canonicalizePath(File file, Map<File, String> cache) {
-        try {
-            String path = cache.get(file);
-            if (path == null) {
-                path = file.getCanonicalPath();
-                cache.put(file, path);
-            }
-            return path;
-        } catch (IOException e) {
-            throw new UncheckedIOException(e);
-        }
-    }
-
     private boolean hasNodeWithOverlappingMutations(Set<String> candidateMutationPaths) {
         if (!candidateMutationPaths.isEmpty()) {
             for (Node runningNode : runningNodes) {
-                MutationInfo runningMutations = mutations.get(runningNode);
+                MutationInfo runningMutations = runningNode.getMutationInfo();
                 Iterable<String> runningMutationPaths = Iterables.concat(runningMutations.outputPaths, runningMutations.destroyablePaths);
                 if (hasOverlap(candidateMutationPaths, runningMutationPaths)) {
                     return true;
@@ -777,25 +647,20 @@ public class DefaultExecutionPlan implements ExecutionPlan {
 
     private boolean doesDestroyNotYetConsumedOutputOfAnotherNode(Node destroyer, Set<String> destroyablePaths) {
         if (!destroyablePaths.isEmpty()) {
-            for (MutationInfo producingNode : mutations.values()) {
-                if (!producingNode.node.isComplete()) {
-                    // We don't care about producing nodes that haven't finished yet
-                    continue;
-                }
-                if (producingNode.consumingNodes.isEmpty()) {
-                    // We don't care about nodes whose output is not consumed by anyone anymore
-                    continue;
-                }
-                if (!hasOverlap(destroyablePaths, producingNode.outputPaths)) {
+            for (Node producingNode : producedButNotYetConsumed) {
+                MutationInfo producingNodeMutations = producingNode.getMutationInfo();
+                assert !producingNodeMutations.consumingNodes.isEmpty();
+                if (!hasOverlap(destroyablePaths, producingNodeMutations.outputPaths)) {
                     // No overlap no cry
                     continue;
                 }
-                for (Node consumer : producingNode.consumingNodes) {
+                for (Node consumer : producingNodeMutations.consumingNodes) {
                     if (doesConsumerDependOnDestroyer(consumer, destroyer)) {
                         // If there's an explicit dependency from consuming node to destroyer,
                         // then we accept that as the will of the user
                         continue;
                     }
+                    LOGGER.debug("Node {} destroys output of consumer {}", destroyer, consumer);
                     return true;
                 }
             }
@@ -865,59 +730,62 @@ public class DefaultExecutionPlan implements ExecutionPlan {
         }
     }
 
-    private void recordNodeStarted(Node node) {
+    private void recordNodeExecutionStarted(Node node) {
         runningNodes.add(node);
     }
 
     private void recordNodeCompleted(Node node) {
-        runningNodes.remove(node);
-        MutationInfo mutations = this.mutations.get(node);
-        for (Node producer : mutations.producingNodes) {
-            MutationInfo producerMutations = this.mutations.get(producer);
-            if (producerMutations.consumingNodes.remove(node) && canRemoveMutation(producerMutations)) {
-                this.mutations.remove(producer);
+        LOGGER.debug("Node {} completed, executed: {}", node, node.isExecuted());
+        MutationInfo mutations = node.getMutationInfo();
+        for (Node producer : node.getDependencySuccessors()) {
+            MutationInfo producerMutations = producer.getMutationInfo();
+            if (producerMutations.consumingNodes.remove(node) && producerMutations.consumingNodes.isEmpty()) {
+                producedButNotYetConsumed.remove(producer);
             }
         }
 
-        if (canRemoveMutation(mutations)) {
-            this.mutations.remove(node);
+        if (!mutations.consumingNodes.isEmpty() && !mutations.outputPaths.isEmpty()) {
+            producedButNotYetConsumed.add(node);
         }
+
         updateAllDependenciesCompleteForPredecessors(node);
     }
 
-    private static boolean canRemoveMutation(@Nullable MutationInfo mutations) {
-        return mutations != null && mutations.node.isComplete() && mutations.consumingNodes.isEmpty();
-    }
-
     @Override
-    public void nodeComplete(Node node) {
+    public void finishedExecuting(Node node) {
         try {
             if (!node.isComplete()) {
                 enforceFinalizers(node);
                 maybeNodesReady = true;
                 if (node.isFailed()) {
+                    LOGGER.debug("Node {} failed", node);
                     handleFailure(node);
+                } else {
+                    LOGGER.debug("Node {} finished executing", node);
                 }
 
-                node.finishExecution();
-                recordNodeCompleted(node);
+                runningNodes.remove(node);
+                node.finishExecution(this::recordNodeCompleted);
+            } else {
+                LOGGER.debug("Already completed node {} reported as finished executing", node);
             }
         } finally {
             unlockProjectFor(node);
+            unlockSharedResourcesFor(node);
         }
     }
 
     private static void enforceFinalizers(Node node) {
         for (Node finalizerNode : node.getFinalizers()) {
             if (finalizerNode.isRequired() || finalizerNode.isMustNotRun()) {
-                HashSet<Node> enforcedNodes = Sets.newHashSet();
+                Set<Node> enforcedNodes = Sets.newHashSet();
                 enforceWithDependencies(finalizerNode, enforcedNodes);
             }
         }
     }
 
     private static void enforceWithDependencies(Node nodeInfo, Set<Node> enforcedNodes) {
-        Deque<Node> candidateNodes = new ArrayDeque<Node>();
+        Deque<Node> candidateNodes = new ArrayDeque<>();
         candidateNodes.add(nodeInfo);
 
         while (!candidateNodes.isEmpty()) {
@@ -980,16 +848,15 @@ public class DefaultExecutionPlan implements ExecutionPlan {
         for (Node node : nodeMapping) {
             // Allow currently executing and enforced tasks to complete, but skip everything else.
             if (node.isRequired()) {
-                node.skipExecution();
+                node.skipExecution(this::recordNodeCompleted);
                 aborted = true;
             }
 
             // If abortAll is set, also stop enforced tasks.
             if (abortAll && node.isReady()) {
-                node.abortExecution();
+                node.abortExecution(this::recordNodeCompleted);
                 aborted = true;
             }
-            updateAllDependenciesCompleteForPredecessors(node);
         }
         return aborted;
     }
@@ -1046,22 +913,6 @@ public class DefaultExecutionPlan implements ExecutionPlan {
         private NodeInVisitingSegment(Node node, int visitingSegment) {
             this.node = node;
             this.visitingSegment = visitingSegment;
-        }
-    }
-
-    private static class MutationInfo {
-        final Node node;
-        final Set<Node> consumingNodes = Sets.newHashSet();
-        final Set<Node> producingNodes = Sets.newHashSet();
-        final Set<String> outputPaths = Sets.newHashSet();
-        final Set<String> destroyablePaths = Sets.newHashSet();
-        boolean hasFileInputs;
-        boolean hasOutputs;
-        boolean hasLocalState;
-        boolean resolved;
-
-        MutationInfo(Node node) {
-            this.node = node;
         }
     }
 
